--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -18,7 +18,6 @@
             <string>Cabin-Italic</string>
             <string>Cabin-Italic</string>
             <string>Cabin-Italic</string>
-            <string>Cabin-Italic</string>
         </mutableArray>
         <mutableArray key="Cabin-Medium.ttf">
             <string>Cabin-Medium</string>
@@ -31,8 +30,6 @@
             <string>Cabin-Medium</string>
         </mutableArray>
         <mutableArray key="Cabin-Regular.ttf">
-            <string>Cabin-Regular</string>
-            <string>Cabin-Regular</string>
             <string>Cabin-Regular</string>
             <string>Cabin-Regular</string>
             <string>Cabin-Regular</string>
@@ -412,7 +409,7 @@
         <!--Chats-->
         <scene sceneID="Tpb-9U-G19">
             <objects>
-                <viewController storyboardIdentifier="Chats" title="Chats" automaticallyAdjustsScrollViewInsets="NO" id="GSL-sK-91w" userLabel="Chats" customClass="ChatsViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Chats" title="Connections" automaticallyAdjustsScrollViewInsets="NO" id="GSL-sK-91w" userLabel="Chats" customClass="ChatsViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="IBe-OM-rhq"/>
                         <viewControllerLayoutGuide type="bottom" id="0km-Ni-5Ff"/>
@@ -480,115 +477,6 @@
                                             <segue destination="kBv-HD-oBL" kind="show" identifier="" id="Hrk-zE-6Yh"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="NewConnectionCell" rowHeight="120" id="efO-pw-6MY" customClass="NewConnectionCell" customModule="Taylr" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="efO-pw-6MY" id="bS9-4F-8Pe">
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="girl-placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="CXi-7U-9Oq">
-                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="119"/>
-                                                    <gestureRecognizers/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="90" id="L1H-RS-nmR"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taylor Swift" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NiJ-6B-ywn">
-                                                    <rect key="frame" x="105" y="18" width="89" height="22"/>
-                                                    <fontDescription key="fontDescription" name="Cabin-Regular" family="Cabin" pointSize="18"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="240" text="I am the founder and Editor-In-Chief of something." lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xte-Hk-mjs">
-                                                    <rect key="frame" x="105" y="42" width="459" height="18"/>
-                                                    <fontDescription key="fontDescription" name="Cabin-Italic" family="Cabin" pointSize="14"/>
-                                                    <color key="textColor" red="0.60777515172958374" green="0.60788232088088989" blue="0.60776835680007935" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-play-small" translatesAutoresizingMaskIntoConstraints="NO" id="i8x-Z8-Zq6">
-                                                    <rect key="frame" x="571" y="49" width="22" height="22"/>
-                                                </imageView>
-                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="ZiW-n2-xbS">
-                                                    <rect key="frame" x="572" y="50" width="20" height="20"/>
-                                                </activityIndicatorView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5m ago" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xTq-x7-jCX">
-                                                    <rect key="frame" x="553" y="8" width="39" height="15"/>
-                                                    <fontDescription key="fontDescription" name="Cabin-Regular" family="Cabin" pointSize="12"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ak0-HZ-F5s">
-                                                    <rect key="frame" x="105" y="79" width="459" height="22"/>
-                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="22" id="LIU-Cp-dbB"/>
-                                                    </constraints>
-                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="3" minimumInteritemSpacing="3" id="FB9-79-Bk4">
-                                                        <size key="itemSize" width="22" height="22"/>
-                                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                                    </collectionViewFlowLayout>
-                                                    <cells>
-                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProfileIconCell" id="RT6-qC-GQH" customClass="ProfileIconCell" customModule="Taylr" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                                            <autoresizingMask key="autoresizingMask"/>
-                                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                                                <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
-                                                                <autoresizingMask key="autoresizingMask"/>
-                                                                <subviews>
-                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-twitter-color" translatesAutoresizingMaskIntoConstraints="NO" id="5Eu-3T-RFI">
-                                                                        <rect key="frame" x="1" y="1" width="20" height="20"/>
-                                                                        <constraints>
-                                                                            <constraint firstAttribute="height" constant="20" id="0vP-cq-NA4"/>
-                                                                            <constraint firstAttribute="width" constant="20" id="qak-yv-ZcF"/>
-                                                                        </constraints>
-                                                                    </imageView>
-                                                                </subviews>
-                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                                            </view>
-                                                            <constraints>
-                                                                <constraint firstAttribute="centerX" secondItem="5Eu-3T-RFI" secondAttribute="centerX" id="Wa0-AK-WXa"/>
-                                                                <constraint firstAttribute="centerY" secondItem="5Eu-3T-RFI" secondAttribute="centerY" id="w5J-WP-l7O"/>
-                                                            </constraints>
-                                                            <connections>
-                                                                <outlet property="imageView" destination="5Eu-3T-RFI" id="Jj8-gD-415"/>
-                                                            </connections>
-                                                        </collectionViewCell>
-                                                    </cells>
-                                                </collectionView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="ak0-HZ-F5s" secondAttribute="bottom" constant="10" id="4YG-qq-Pee"/>
-                                                <constraint firstItem="ZiW-n2-xbS" firstAttribute="trailing" secondItem="bS9-4F-8Pe" secondAttribute="trailingMargin" id="8GI-F2-3Sa"/>
-                                                <constraint firstItem="NiJ-6B-ywn" firstAttribute="leading" secondItem="CXi-7U-9Oq" secondAttribute="trailing" constant="15" id="AS2-uJ-CSC"/>
-                                                <constraint firstItem="xTq-x7-jCX" firstAttribute="top" secondItem="bS9-4F-8Pe" secondAttribute="topMargin" id="FZY-rY-TJ2"/>
-                                                <constraint firstItem="CXi-7U-9Oq" firstAttribute="leading" secondItem="bS9-4F-8Pe" secondAttribute="leading" id="GMk-Aw-WB3"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="Xte-Hk-mjs" secondAttribute="trailing" constant="28" id="Gtg-WP-mqr"/>
-                                                <constraint firstItem="ZiW-n2-xbS" firstAttribute="leading" secondItem="ak0-HZ-F5s" secondAttribute="trailing" constant="8" symbolic="YES" id="Hc7-SJ-oeW"/>
-                                                <constraint firstItem="Xte-Hk-mjs" firstAttribute="leading" secondItem="NiJ-6B-ywn" secondAttribute="leading" id="I5t-u8-VAK"/>
-                                                <constraint firstAttribute="bottom" secondItem="CXi-7U-9Oq" secondAttribute="bottom" id="OKI-Ts-cpF"/>
-                                                <constraint firstItem="i8x-Z8-Zq6" firstAttribute="centerY" secondItem="ZiW-n2-xbS" secondAttribute="centerY" id="Uve-ep-kAD"/>
-                                                <constraint firstItem="Xte-Hk-mjs" firstAttribute="top" secondItem="NiJ-6B-ywn" secondAttribute="bottom" constant="2" id="duD-Hh-txc"/>
-                                                <constraint firstItem="xTq-x7-jCX" firstAttribute="trailing" secondItem="bS9-4F-8Pe" secondAttribute="trailingMargin" id="hfO-WY-wUg"/>
-                                                <constraint firstItem="CXi-7U-9Oq" firstAttribute="top" secondItem="bS9-4F-8Pe" secondAttribute="top" id="kzN-JV-Dtb"/>
-                                                <constraint firstAttribute="centerY" secondItem="ZiW-n2-xbS" secondAttribute="centerY" id="pKW-NC-nHt"/>
-                                                <constraint firstItem="NiJ-6B-ywn" firstAttribute="top" secondItem="bS9-4F-8Pe" secondAttribute="topMargin" constant="10" id="rZU-Vl-FhS"/>
-                                                <constraint firstItem="i8x-Z8-Zq6" firstAttribute="centerX" secondItem="ZiW-n2-xbS" secondAttribute="centerX" id="wEW-d4-Np1"/>
-                                                <constraint firstItem="ak0-HZ-F5s" firstAttribute="leading" secondItem="Xte-Hk-mjs" secondAttribute="leading" id="yL6-oS-0fc"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="avatarView" destination="CXi-7U-9Oq" id="s5M-Om-7hA"/>
-                                            <outlet property="nameLabel" destination="NiJ-6B-ywn" id="4Wy-BU-RFa"/>
-                                            <outlet property="playIcon" destination="i8x-Z8-Zq6" id="g17-IW-rtZ"/>
-                                            <outlet property="profileIconsView" destination="ak0-HZ-F5s" id="EI4-QG-Ex7"/>
-                                            <outlet property="spinner" destination="ZiW-n2-xbS" id="dqM-6O-FYf"/>
-                                            <outlet property="taglineLabel" destination="Xte-Hk-mjs" id="xf4-x9-AoZ"/>
-                                            <outlet property="timestampLabel" destination="xTq-x7-jCX" id="jd9-ph-yNz"/>
-                                            <segue destination="kBv-HD-oBL" kind="show" identifier="" id="TFP-eW-cVI"/>
-                                        </connections>
-                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
@@ -603,23 +491,9 @@
                     <tabBarItem key="tabBarItem" title="" image="ic-chats" id="UYe-je-j1k">
                         <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="-5"/>
                     </tabBarItem>
-                    <navigationItem key="navigationItem" id="3Yx-31-1g1">
-                        <nil key="title"/>
-                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="omL-rj-1qF">
-                            <rect key="frame" x="180" y="7" width="240" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <segments>
-                                <segment title="Contacts"/>
-                                <segment title="New"/>
-                            </segments>
-                            <connections>
-                                <action selector="didSelectSegment:" destination="GSL-sK-91w" eventType="valueChanged" id="N4W-QB-WNx"/>
-                            </connections>
-                        </segmentedControl>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Connections" id="3Yx-31-1g1"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="segmentedControl" destination="omL-rj-1qF" id="dyM-3X-oRq"/>
                         <outlet property="tableView" destination="4cg-hq-bZ8" id="YhK-na-cJu"/>
                     </connections>
                 </viewController>
@@ -2734,7 +2608,6 @@ While you are in the conversation though you can replay videos you just watched 
     <resources>
         <image name="discover-logo" width="64" height="35"/>
         <image name="empty-profile-pic" width="100" height="100"/>
-        <image name="girl-placeholder" width="420" height="515"/>
         <image name="ic-approved" width="18" height="18"/>
         <image name="ic-back-arrow" width="12" height="21"/>
         <image name="ic-chats" width="27" height="24"/>
@@ -2750,7 +2623,6 @@ While you are in the conversation though you can replay videos you just watched 
         <image name="ic-more" width="29" height="7"/>
         <image name="ic-mortar" width="22" height="18"/>
         <image name="ic-play-medium" width="40" height="40"/>
-        <image name="ic-play-small" width="22" height="22"/>
         <image name="ic-right-arrow" width="8" height="11"/>
         <image name="ic-right-chevron" width="24" height="21"/>
         <image name="ic-twitter-color" width="28" height="28"/>
@@ -2761,7 +2633,7 @@ While you are in the conversation though you can replay videos you just watched 
         <image name="sample-photo" width="1242" height="660"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="Hrk-zE-6Yh"/>
         <segue reference="Fwv-Pj-RXP"/>
-        <segue reference="33G-iq-iGB"/>
     </inferredMetricsTieBreakers>
 </document>
